--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -77,7 +77,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: deploy
     container: 
-      image: mcr.microsoft.com/playwright:v.1.56.1-jammy
+      image: mcr.microsoft.com/playwright:v1.56.1-jammy
       options: --user 1001
     env: 
       E2E_BASE_URL: https://spanish-cards.netlify.app/
